--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.knowway">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name="com.knowway.MyApplication"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +15,14 @@
         android:theme="@style/Theme.KnowWay">
         <activity
             android:name="com.knowway.ui.activity.ChatActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan|adjustUnspecified">
+<!--        <intent-filter>-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
+
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--        </intent-filter>-->
+        </activity>
         <activity
             android:name="com.knowway.ui.activity.DeptInfoActivity"
             android:exported="false" />
@@ -21,13 +32,6 @@
         <activity
             android:name="com.knowway.ui.activity.OnboardingActivity"
             android:exported="true">
-
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
-
-
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
         </activity>
         <activity
             android:name="com.knowway.ui.activity.MainActivity"
