--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,16 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.knowway"
+        def localProperties = new Properties()
+        def localPropertiesFile = rootProject.file('local.properties')
+        if (localPropertiesFile.exists()) {
+            localPropertiesFile.withInputStream { stream ->
+                localProperties.load(stream)
+            }
+        }
+
+        buildConfigField "String", "WEBSOCKET_IP", "\"${localProperties['WEBSOCKET_IP']}\""
+        applicationId "com.knowway"
         minSdk 26
         targetSdk 31
         versionCode 1
