--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
             }
         }
 
-        buildConfigField "String", "WEBSOCKET_IP", "\"${localProperties['WEBSOCKET_IP']}\""
+        buildConfigField "String", "BASE_IP_ADDRESS", "\"${localProperties['base_ip_address']}\""
         applicationId "com.knowway"
         minSdk 26
         targetSdk 31
