--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
+    implementation "androidx.paging:paging-runtime:3.1.1"
 }
