--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
     implementation "androidx.paging:paging-runtime:3.1.1"
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 }
