--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,20 @@
             android:name="com.knowway.ui.activity.ChatActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustPan|adjustUnspecified">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name="com.knowway.ui.activity.DepartmentStoreSearch"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name="com.knowway.ui.activity.MypageActivity"
@@ -35,12 +41,12 @@
         <activity
             android:name="com.knowway.ui.activity.MainActivity"
             android:exported="true">
-        </activity>
-        <activity
-            android:name="com.knowway.ui.activity.user.SignupActivity"
-            android:exported="true">
-        </activity>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
