feat: 녹음 저장 화면

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,21 @@
         <activity
             android:name=".ui.activity.AdminRecordingListActivity"
             android:exported="true" >
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
+<!--                <intent-filter>-->
+<!--                    <action android:name="android.intent.action.MAIN" />-->
 
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+<!--                    <category android:name="android.intent.category.LAUNCHER" />-->
+<!--                </intent-filter>-->
+        </activity>
+        <activity
+            android:name=".ui.activity.RecordActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
         <activity
             android:name=".ui.activity.AdminAreaSelectionActivity"
@@ -71,11 +81,11 @@
             android:exported="true"
             android:windowSoftInputMode="adjustPan|adjustUnspecified">
 
-             <intent-filter>
-                 <action android:name="android.intent.action.MAIN" />
+<!--             <intent-filter>-->
+<!--                 <action android:name="android.intent.action.MAIN" />-->
 
-                 <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+<!--                 <category android:name="android.intent.category.LAUNCHER" />-->
+<!--             </intent-filter>-->
         </activity>
         <activity
             android:name=".ui.activity.MypageActivity"
