--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'org.java-websocket:Java-WebSocket:1.5.2'
     implementation 'androidx.cardview:cardview:1.0.0'
