--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,12 @@
             android:exported="true"></activity>
         <activity
             android:name=".ui.activity.user.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+<!--             <intent-filter>-->
+<!--                 <action android:name="android.intent.action.MAIN" />-->
+<!--                 <category android:name="android.intent.category.LAUNCHER" />-->
+<!--             </intent-filter>-->
+        </activity>
         <activity
             android:name=".ui.activity.user.SignupActivity"
             android:exported="true"></activity>
@@ -61,8 +66,8 @@
              <intent-filter>
                  <action android:name="android.intent.action.MAIN" />
 
-<!--                 <category android:name="android.intent.category.LAUNCHER" />-->
-<!--             </intent-filter>-->
+                 <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
 
         </activity>
         <activity
@@ -79,10 +84,10 @@
         <activity
             android:name=".ui.activity.MypageActivity"
             android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+<!--        <intent-filter>-->
+<!--            <action android:name="android.intent.action.MAIN" />-->
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--        </intent-filter>-->
         </activity>
 <!--        <activity-->
 <!--            android:name=".ui.activity.OnboardingActivity"-->
