--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,11 +36,14 @@
             android:exported="true"></activity>
         <activity
             android:name=".ui.activity.user.LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan|adjustUnspecified">
         </activity>
         <activity
             android:name=".ui.activity.user.SignupActivity"
-            android:exported="true"></activity>
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan|adjustUnspecified">
+        </activity>
         <activity
             android:name=".ui.activity.ChatActivity"
             android:exported="true"
